--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>fortune teller projet</title>
+        <title>Fortune teller projet</title>
     </head>
     <body>
         <h1>For the year 2030</h1>
